--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Taoism'
 - !lcsh 'Chinese language'
 - !lcsh 'China -- Social life and customs'
+- GITenberg
 tableOfContents: The Chinese language -- A Chinese library -- Democratic China --
   China and ancient Greece -- Taoism -- Some Chinese manners and customs.
 title: China and the Chinese
